<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cam">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="38dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_back"
                    android:contentDescription="@string/zur_ck_button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <org.videolan.libvlc.util.VLCVideoLayout
                android:id="@+id/videoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_play_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_button"
                android:contentDescription="@string/play_video" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            tools:ignore="RtlHardcoded"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="right"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smart"
                    android:textColor="@color/welcome_textcolor"
                    android:fontFamily="@font/poppinsblack"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:fontFamily="@font/poppins"
                    android:textSize="32sp"
                    android:textColor="@color/welcome_textcolor" />
            </LinearLayout>



        </LinearLayout>
    </FrameLayout>

</FrameLayout>