<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:cardBackgroundColor="#212429"
        app:cardCornerRadius="0dp"
        app:contentPadding="5dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="10dp"
                tools:ignore="RtlSymmetry">

                <!-- Add your UI elements -->

                <TextView
                    android:id="@+id/akt_lampe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kanitfont"
                    android:letterSpacing="0.08"
                    android:paddingTop="0dp"
                    android:text="@string/lampe_1"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                tools:layout_editor_absoluteX="15dp"
                tools:layout_editor_absoluteY="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry">

                <!-- Add your UI elements -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/akt_prozent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="80dp"
                        android:fontFamily="@font/kanitfont"
                        android:letterSpacing="0.08"
                        android:paddingTop="0dp"
                        android:text="@string/_0"
                        android:textColor="#95a5b5"
                        android:textSize="13sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <ImageView
                        android:id="@+id/light_colorpicker"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="13dp"
                        app:srcCompat="@drawable/colorpicker"
                        android:contentDescription="@string/colorpicker" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:paddingTop="50dp"
                tools:layout_editor_absoluteX="90dp"
                tools:layout_editor_absoluteY="60dp"
                tools:ignore="RtlHardcoded">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:paddingLeft="15dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:id="@+id/licht1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/sonne_slider_klein"
                        android:contentDescription="@string/kleines_licht" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <com.google.android.material.slider.Slider
                        android:id="@+id/color_slider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="1"
                        android:valueFrom="0"
                        android:valueTo="100"
                        app:haloColor="@color/halo_color"
                        app:labelBehavior="floating"
                        app:thumbColor="@color/app_yellow"
                        app:thumbRadius="12dp"
                        app:thumbStrokeColor="@color/background_dreieck"
                        app:thumbStrokeWidth="1dp"
                        app:tickColorActive="@color/app_yellow"
                        app:tickColorInactive="@color/halo_color"
                        app:trackColorActive="@color/app_yellow"
                        app:trackColorInactive="@color/halo_color"
                        app:trackHeight="5dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:gravity="right"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:id="@+id/licht100"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/sonne_slider"
                        android:contentDescription="@string/grosses_licht" />
                </RelativeLayout>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>